--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,14 @@ jobs:
         go-version: '1.22'
 
     - name: Build
+      id: build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: List
+      run: ls -la
 
     - name: Deploy
       uses: appleboy/scp-action@v0.1.7
