--- a/env.template
+++ b/env.template
@@ -1,6 +1,7 @@
-TELEGRAM_TOKEN=
-PLEX_SHUTDOWN_TRIGGER=
-WAKEUP_BROADCAST_ADDRESS=
 PLEX_MAC=
-AUTHORIZED_USER_ID=
-ZINA_SECRET=
+PLEX_SHUTDOWN_SECRET=
+PLEX_SHUTDOWN_TRIGGER=
+PLEX_URL=
+PLEX_WAKEUP_BROADCAST_ADDRESS=
+TELEGRAM_AUTHORIZED_USER_ID=
+TELEGRAM_TOKEN=
