--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,11 +1,11 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "sql/query.sql"
-    schema: "sql/schema.sql"
+    queries: "internal/sql/query.sql"
+    schema: "internal/sql/schema.sql"
     gen:
       go:
         package: "sqlc"
-        out: "sqlc"
+        out: "internal/sqlc"
         sql_package: "pgx/v5"
         emit_pointers_for_null_types: true
